--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "commit-msg": "es-commit-msg-validator"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
@@ -30,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "es-commit-msg-validator": "^1.0.2",
     "react": "^18.0.0"
   },
   "devDependencies": {
