--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+**/*.md
 **/*.svg
 **/*.ejs
 **/*.html
@@ -5,3 +6,5 @@ package.json
 .umi
 .umi-production
 .umi-test
+**/*.less.d.ts
+**/iconfont.js
