--- a/package.json
+++ b/package.json
@@ -37,12 +37,17 @@
     ]
   },
   "dependencies": {
-    "react": "^18.0.0"
+    "@ant-design/icons": "^5.0.0",
+    "antd": "^5.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.0.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@umijs/fabric": "^2.8.1",
@@ -50,14 +55,15 @@
     "dumi": "^1.1.0",
     "es-commit-msg-validator": "^1.0.2",
     "eslint": "^8.32.0",
-    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-jest": "26.x",
+    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "father": "^4.0.0-rc.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^18.2.0",
     "yorkie": "^2.0.0"
   }
 }
