--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "knowledge-mixer-design",
   "version": "1.0.0",
   "scripts": {
-    "start": "dumi dev",
+    "start": "dumi  dev ",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
     "build": "father build",
@@ -37,7 +37,8 @@
     ]
   },
   "dependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.1",
@@ -50,8 +51,8 @@
     "dumi": "^1.1.0",
     "es-commit-msg-validator": "^1.0.2",
     "eslint": "^8.32.0",
-    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-jest": "26.x",
+    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^43.0.2",
     "father": "^4.0.0-rc.2",
