--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
+    "@types/lodash-es": "^4.17.6",
     "antd": "^5.1.5",
+    "lodash-es": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4"
