--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
     "@types/lodash-es": "^4.17.6",
+    "@types/react-signature-canvas": "^1.0.2",
     "antd": "^5.1.5",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
+    "react-signature-canvas": "^1.0.6",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
