--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@ant-design/icons": "^5.0.0",
     "@types/lodash-es": "^4.17.6",
     "@types/react-signature-canvas": "^1.0.2",
+    "ahooks": "^3.7.4",
     "antd": "^5.1.5",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
